--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Eclipse
+.metadata
+.classpath
+.project
+Eclipse-pet/.gitignore
+Eclipse-pet/FirstEclipse/.gitignore
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
