--- a/Eclipse-pet/gradle-eclipse/lib/build.gradle
+++ b/Eclipse-pet/gradle-eclipse/lib/build.gradle
@@ -19,6 +19,13 @@ repositories {
 dependencies {
 
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+	
+	// https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+    
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
+    
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
