--- a/Eclipse-pet/mysql/pom.xml
+++ b/Eclipse-pet/mysql/pom.xml
@@ -54,6 +54,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+		  <configuration>
+			    <environmentVariables><env>test</env></environmentVariables>
+		  </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
